# lxdx

./: .flake8  .gitignore  CHANGELOG.rst  LICENSE  README.md  README.rst  poetry.toml  pyproject.toml  pytest.ini
.github/workflows/: publish-package.yml  publish-pre-release.yml  python-app.yml  python-ci.yml  python-cicd.yml  python-publish.yml
docs/: index.html  index.md
docs/source/: conf.py  examples.rst  getting-started.rst  index.rst  license.rst  modules.rst  normalisation.rst
lxdx/: __init__.py  dixt.py  lixt.py
tests/: test_dixt.py  test_misc.py
